--- a/ProjetFilRouge-Back/src/main/resources/logstash-file.conf
+++ b/ProjetFilRouge-Back/src/main/resources/logstash-file.conf
@@ -32,7 +32,7 @@ filter {
 output {
 	stdout { }
 	elasticsearch {
-		hosts => ["localhost:9200"]
+		hosts => ["164.132.212.109:9200"]
 		index => "FilRouge-file-%{+YYYY.MM.dd}"
 	}
 }
