--- a/ProjetFilRouge-Back/src/main/resources/application.yml
+++ b/ProjetFilRouge-Back/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
  datasource:
-   url: jdbc:h2:file:~/filrouge
+   url: jdbc:h2:file:~/filrouge2
    
  jpa:    
   hibernate:
-   ddl-auto: update
+   ddl-auto: create
 # spring data jpa
  # jpa:
     #hibernate:
@@ -19,8 +19,22 @@ spring:
     #password: 
 
   #jpa:
-     
+  
+management:
+  endpoint:
+    shutdown:
+      enabled: true
+    info:
+      enabled: true      
       
+
+  endpoints:
+    web:
+      exposure:
+        exclude: "env,beans"
+        include: "*"
+    enabled-by-default: true
+
 server:
   servlet:
     context-path: /projetfilrouge
