--- a/ProjetFilRouge-Back/src/main/resources/logstash-tcp.conf
+++ b/ProjetFilRouge-Back/src/main/resources/logstash-tcp.conf
@@ -8,7 +8,7 @@ input {
 output {
     stdout {} 
 	elasticsearch {
-		hosts => ["http://164.132.212.109:9200"]
+		hosts => ["http://http://170.75.170.145:9200"]
 		index => "FilRouge-tcp-%{+YYYY.MM.dd}"
   }
 }
